--- a/WoldProject/App.config
+++ b/WoldProject/App.config
@@ -14,5 +14,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="de41_Titov_v1_eduEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=46.42.17.183;initial catalog=de41_Titov_v1_edu;user id=stis419;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="de41_TItov_v2Entities" connectionString="metadata=res://*/BaseModel.csdl|res://*/BaseModel.ssdl|res://*/BaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=46.42.17.183;initial catalog=de41_TItov_v2;user id=stis419;password=twM493JkXv+~;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
